Day 4 — Flight Search Filters & Request Validation