@@ -1,10 +1,12 @@
 package com.skymind.backend.service;
 
+
 import com.skymind.backend.dto.*;
 import com.skymind.backend.externalApi.AviationstackClient;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class FlightService {
@@ -15,8 +17,24 @@ public class FlightService {
         this.client = client;
     }
 
-    public List<FlightResultDto> searchFlights(String depIata) {
-        FlightSearchResponse response = client.searchFlights(depIata);
-        return response.getData().stream().map(FlightMapper::toDto).toList();
+    public List<FlightResultDto> searchFlights(FlightSearchRequest request) {
+
+        FlightSearchResponse response = client.searchFlights(request.getOrigin());
+
+        List<FlightResultDto> flights =
+                response.getData()
+                        .stream()
+                        .map(FlightMapper::toDto)
+                        .collect(Collectors.toList());
+
+        if (request.getDestination() != null) {
+            flights = flights.stream().filter(f -> request.getDestination()
+                            .equalsIgnoreCase(f.getArrivalAirport())).toList();
+        }
+        if (request.getAirline() != null) {
+            flights = flights.stream().filter(f -> f.getAirline()
+                                    .equalsIgnoreCase(request.getAirline())).toList();
+        }
+        return flights.stream().limit(request.getLimit()).toList();
     }
 }
